--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "nextjs",
   "main": "index.js",
   "scripts": {
+    "dev": "npm-run-all --parallel build:server build:client start",
     "start": "npx nodemon --watch src server_build/bundle.js",
     "build:client": "npx webpack build --config ./webpack.client.js --watch",
     "build:server": "npx webpack build --config ./webpack.server.js --watch",
@@ -23,6 +24,9 @@
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
     "@types/express": "^4.17.14",
+    "@types/react": "^18.0.21",
+    "@types/react-dom": "^18.0.6",
+    "@types/react-helmet": "^6.1.5",
     "@typescript-eslint/eslint-plugin": "^5.39.0",
     "@typescript-eslint/parser": "^5.39.0",
     "babel-loader": "^8.2.5",
@@ -37,6 +41,9 @@
   },
   "dependencies": {
     "express": "^4.18.1",
-    "react": "^18.2.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
+    "react-router-dom": "^6.4.1"
   }
 }
